# lead_scoring

./: .gitignore  README.md  activate.sh  config_poetry.txt  init.sh  pyproject.toml
app/application/: play_file.py
app/config/: config.py
app/domain/: BusinessData.py
app/infrastructure/: SalesData.py
architecture/: CleanDataTransformer.py
data/: README.md  data_data.csv
data_analysis/: README.md
domain/: PipelineTraining.py
exploration/: P1_Pipeline_Step1_DataAnalysis.ipynb
exploration/.ipynb_checkpoints/: P1_Pipeline_Step1_DataAnalysis-checkpoint.ipynb
gridsearch/: README.md
lead_scoring_marieme_alessio/application/: main.py  predict.py  train_model.py
lead_scoring_marieme_alessio/config/: config.py  use_der_act.txt  use_der_act_not.txt  use_index_act.txt  use_origin_lead.txt  use_qualite_lead.txt  use_source_lead.txt  use_spec.txt  use_tags.txt  use_ville.txt
lead_scoring_marieme_alessio/domain/: categoricalTransformer.py  evaluate_model.py  feature_selector.py  gb_pipeline.py  log_reg_pipeline.py  numericalTransformer.py  numerical_transformer.py  perf.txt  pipeline_transformer.py  rand_for_pipeline.py  svc_pipeline.py
lead_scoring_marieme_alessio/infrastructure/: clean_data_transformer.py
models/: gb.joblib  log_reg.joblib  rf.joblib  svc.joblib
notebook/: best_params.json  exploration.ipynb  exploration_finale.ipynb  gridsearch.ipynb  gridsearch_marieme.ipynb  intelligibility.ipynb
notebook/utils/: __init__.py  mltask.py  (+3 more)
output/: README.md  gb_processed_data.csv  log_reg_processed_data.csv  rf_processed_data.csv  svc_processed_data.csv
predict/: README.md
(+19 files in other folders)
